--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,12 @@
 <header class="site-header">
-	<a href="/"><img src="{{ "img/logo-liodi-small.png" | prepend: site.baseurl }}" alt="LiODi logo" />
+	<a href="{{ site.baseurl }}/"><img src="{{ "/img/logo-liodi-small.png" | prepend: site.baseurl }}" alt="LiODi logo" />
 	<h2>Linked Open Dictionaries</a></h2>
 	<nav>
 		<ul>
-			<li><a href="/about">About the Project</a></li>
-			<li><a href="/team">Team</a></li>
-			<li><a href="/software">Software</a></li>
-			<li class="last"><a href="/publications">Publications</a></li>
+			<li><a href="{{ site.baseurl }}/about">About the Project</a></li>
+			<li><a href="{{ site.baseurl }}/team">Team</a></li>
+			<li><a href="{{ site.baseurl }}/software">Software</a></li>
+			<li class="last"><a href="{{ site.baseurl }}/publications">Publications</a></li>
 		</ul>
 	</nav>
 </header>
