--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
 		<ul>
 			<li><a href="{{ site.baseurl }}/about">About the Project</a></li>
 			<li><a href="{{ site.baseurl }}/team">Team</a></li>
-			<li><a href="{{ site.baseurl }}/software">Software</a></li>
+			<li><a href="{{ site.baseurl }}/software">Solutions</a></li>
 			<li class="last"><a href="{{ site.baseurl }}/publications">Publications</a></li>
 		</ul>
 	</nav>
